--- a/app/views/figures/edit.erb
+++ b/app/views/figures/edit.erb
@@ -5,3 +5,6 @@
 <input type= "text" name= "name" value= "<%= @figure.name %>" >
 <input type= "submit" value= "Submit" >
 </form>
+
+<a class="button" href="/figures">Figures</a>
+<a class="button" href="/">Home</a>
