--- a/app/views/landmarks/edit.erb
+++ b/app/views/landmarks/edit.erb
@@ -1,6 +1,13 @@
 <h2>Edit Historical Landmark</h2>
 
-<!-- add content here -->
+<form action= "/landmarks/<%= @landmark.id %>" method = "POST" >
+  <input id= "hidden" type= "hidden" name= "_method" value= "PATCH" >
+  <label for= "name" > Name: </label><br>
+  <input type= "text" name= "name" value= "<%= @landmark.name %>" >
+  <label for= "name" > Year Completed: </label><br>
+  <input type= "text" name= "year_completed" value= "<%= @landmark.year_completed %>" >
+  <input type= "submit" value= "Submit" >
+</form>
 
 <a class="button" href="/landmarks">Landmarks</a>
 <a class="button" href="/">Home</a>
