--- a/app/views/landmarks/index.erb
+++ b/app/views/landmarks/index.erb
@@ -1,6 +1,13 @@
 <h2>All Historical Landmarks</h2>
 
-<!-- add content here -->
+<ul>
+  <% @landmarks.each do |landmark|%>
+  <li> <%= landmark.name %> -- <%=landmark.year_completed%> </li>
+  <% end %>
+</ul>
+<form action='/landmarks/new' method='get'>
+  <input type="submit" value="New Landmark">
+</form>
 
-<a class="button" href="/figures">Figures</a>
+<a class="button" href="/landmarks">landmarks</a>
 <a class="button" href="/">Home</a>
