--- a/app/views/landmarks/new.erb
+++ b/app/views/landmarks/new.erb
@@ -1,6 +1,7 @@
 <h2>Create New Landmark</h2>
-
-<!-- add content here -->
-
-<a class="button" href="/landmarks">Landmarks</a>
-<a class="button" href="/">Home</a>
+<%# add labels for each text field.... if we had time%>
+<form action="/landmarks/" method="post">
+  <input type="text" name="name" label="Name">
+  <input type="text" name="year_completed" label="Year Completed">
+  <input type="submit" value="Submit">
+</form>
